load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "libuneventful",
    srcs = glob([
        "src/**/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.hpp",
    ]),
    includes = ["include"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "@libevent//:event",
        "@unlog//:libunlog",
    ],
)
